Fix code snippets on mobile and add project to portfolio

--- a/_sass/modules/_code.scss
+++ b/_sass/modules/_code.scss
@@ -54,7 +54,7 @@ pre {
 
             display: block;
             content: '</> Code snippet: click to expand';
-            height: $highlightHeight + 1;
+            height: $highlightHeight + 2;
             font-family: $base__fontPrimary;
             font-weight: bold;
             cursor: pointer;
